Hooked up male-chimp (mostly)

--- a/views/footer-orig.twig
+++ b/views/footer-orig.twig
@@ -7,26 +7,22 @@
 				<h5 class="ftr-h1">Bikes Fight Cancer</h5>
 				{{ footer.footer.post_content }}
 			</div><!-- /ftr-logo-mod -->	
-			<!-- Begin MailChimp Signup Form -->
-            <link href="http://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-            <div id="mc_embed_signup" class="mailing-list-mod ui-block-2">
-            <form action="http://bikesfightcancer.us5.list-manage.com/subscribe/post?u=77968ce6af3fe82c4a8ebd182&amp;id=9af9b10b3d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <label for="mailing-list" class="email-h1">E-mail List</label>
-            <div class="mc-field-group">
-                <input type="email" value="" name="EMAIL" class="required email mailing-list" id="mce-EMAIL" placeholder="Enter your email address">
-            </div>
-                <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn mailing-list-subscribe"></div>
-            </form>
-            </div> <!-- /mc_embed_signup -->
+			<div class="mailing-list-mod ui-block-2">
+				<div class="input">
+					<label for="mailing-list" class="email-h1">E-mail List</label>
+					<input type="email" value="" name="email" placeholder="Enter your email address" class="required email" id="mailing-list">
+					<input type="submit" value="Submit" name="subscribe" id="mailing-list-subscribe" class="button btn">
+				</div><!-- /input -->	
+			</div><!-- /mailing-list-mod -->
 		</div><!-- /ftr-mod -->	
 	</div><!-- /page-mod -->
 	<div class="site-credit">
 		<a href="http://www.upstatement.com" target="_blank">Site by Upstatement</a>
 	</div><!-- /site-credit -->	
 </footer>
+
+
+
 
 <script type="text/javascript">
 var fnames = new Array();var ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';
@@ -201,5 +197,3 @@ function mce_success_cb(resp){
 
 </script>
 <!--End mc_embed_signup-->
-
-
