--- a/views/sponsors.twig
+++ b/views/sponsors.twig
@@ -18,8 +18,10 @@
 			</div> <!-- /ui-block-2 -->
 			<div class="ui-block-1">
 				<img class="ftr-logo-bike" src="/wp-content/themes/spokes/images/ftr-logo-bike.png"/>
-				<a class="btn btn-large btn-donate">Join The List</a>
+				<a class="btn btn-large btn-donate" href="mailto:team@bikesfightcancer.org" Subject="We'd Like to Joing as Sponsor">Join The List</a>
 			</div>
  		</div><!-- sponsors-mod -->
 	</div> <!-- /page-mod -->	 
 </section> <!-- /sponsors -->
+
+<a >
