--- a/src/style.scss
+++ b/src/style.scss
@@ -1097,12 +1097,12 @@ footer {
 			url(/wp-content/themes/spokes/images/mailing-list-bg.jpg);
 	background-size: 150px, 100%;
 
-	#mailing-list, #mailing-list-subscribe{
+	#mce-EMAIL, #mc-embedded-subscribe {
 		height: 32px;
 		margin-bottom: 12px;
 	}
 
-	#mailing-list {
+	#mce-EMAIL {
 		border-color: #eee;
 		@include border-radius(5px);
 		padding: 10px;
@@ -1111,7 +1111,7 @@ footer {
 		width: 229px;
 	}//mailing-list
 
-	#mailing-list-subscribe {
+	#mc-embedded-subscribe {
 		width: 105px;
 	}
 }
@@ -1153,6 +1153,10 @@ footer {
 	text-align: center;
 }
 
+
+#mc_embed_signup {
+
+}
 
 
 /* ============================================= */
