store-closed page and sign made

--- a/src/style.scss
+++ b/src/style.scss
@@ -980,6 +980,29 @@ a.history-link-mod {
 
 }
 
+
+/* ============================================= */
+
+/*	Store	    						   		 */ 
+
+/* ============================================= */
+
+.closed-store {
+	background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
+}
+
+.closed-sign-mod {
+	max-width: 620px;
+	width: 100%;
+	margin: 0 auto;
+	padding-top: 90px;
+
+	img {
+		max-width: 600px;
+	}
+}
+
+
 /* ============================================= */
 
 /*	Footer	    						   		 */ 
