--- a/style.css
+++ b/style.css
@@ -1666,7 +1666,7 @@ em {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 830, src/style.scss */
+/* line 829, src/style.scss */
 .history-year:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -1684,18 +1684,18 @@ em {
   }
 }
 
-/* line 841, src/style.scss */
+/* line 840, src/style.scss */
 a.history-link-mod {
   display: block;
 }
 
-/* line 845, src/style.scss */
+/* line 844, src/style.scss */
 .year-tz-img {
   width: 100%;
   margin-top: -1px;
 }
 @media (min-width: 900px) {
-  /* line 845, src/style.scss */
+  /* line 844, src/style.scss */
   .year-tz-img {
     float: left;
     max-width: 380px;
@@ -1703,25 +1703,25 @@ a.history-link-mod {
   }
 }
 
-/* line 856, src/style.scss */
+/* line 855, src/style.scss */
 .year-tz-txt-mod {
   padding: 25px 25px 30px 25px;
   text-align: left;
 }
 @media (min-width: 900px) {
-  /* line 856, src/style.scss */
+  /* line 855, src/style.scss */
   .year-tz-txt-mod {
     padding: 27px 20px 30px 420px;
   }
 }
-/* line 864, src/style.scss */
+/* line 863, src/style.scss */
 .year-tz-txt-mod .tz-h1 {
   color: #9f916f;
   margin-bottom: 15px;
 }
 
 /***  History-Post  ***/
-/* line 873, src/style.scss */
+/* line 872, src/style.scss */
 .history-aside {
   margin: 0 auto;
   position: static;
@@ -1732,7 +1732,7 @@ a.history-link-mod {
   padding: 0px 80px 80px 80px;
 }
 @media (min-width: 1150px) {
-  /* line 873, src/style.scss */
+  /* line 872, src/style.scss */
   .history-aside {
     top: 1100px;
     left: 4%;
@@ -1742,41 +1742,41 @@ a.history-link-mod {
   }
 }
 @media (min-width: 1300px) {
-  /* line 873, src/style.scss */
+  /* line 872, src/style.scss */
   .history-aside {
     left: 10%;
   }
 }
 
-/* line 896, src/style.scss */
+/* line 895, src/style.scss */
 .caption-section-h {
   font: 800 23px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #444;
   margin: 40px 0px 15px 0px;
 }
 
-/* line 902, src/style.scss */
+/* line 901, src/style.scss */
 .caption-h {
   font: 800 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #555;
 }
 
-/* line 907, src/style.scss */
+/* line 906, src/style.scss */
 .history-aside-ul {
   margin-bottom: 25px;
 }
 
-/* line 911, src/style.scss */
+/* line 910, src/style.scss */
 .history-aside-item {
   font: 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #888;
 }
-/* line 915, src/style.scss */
+/* line 914, src/style.scss */
 .history-aside-item:last-child {
   margin-bottom: 22px;
 }
 
-/* line 920, src/style.scss */
+/* line 919, src/style.scss */
 .history-post-img {
   margin-bottom: 25px;
 }
@@ -1784,7 +1784,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Raffle Page    						   		 */
 /* ============================================= */
-/* line 931, src/style.scss */
+/* line 930, src/style.scss */
 .raffle-list {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   border-top: 2px solid;
@@ -1792,7 +1792,7 @@ a.history-link-mod {
   border-color: #fff;
 }
 
-/* line 938, src/style.scss */
+/* line 937, src/style.scss */
 .raffle-list-mod {
   background-color: #fff;
   margin: 0 auto;
@@ -1808,19 +1808,19 @@ a.history-link-mod {
   text-align: center;
 }
 @media (min-width: 550px) {
-  /* line 938, src/style.scss */
+  /* line 937, src/style.scss */
   .raffle-list-mod {
     padding: 50px 100px 60px 90px;
   }
 }
 
-/* line 955, src/style.scss */
+/* line 954, src/style.scss */
 .raffle-list-item {
   font: 20px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 
-/* line 960, src/style.scss */
+/* line 959, src/style.scss */
 .raffle-list-bg {
   background-color: #fff;
   height: 515px;
@@ -1837,34 +1837,54 @@ a.history-link-mod {
   position: absolute;
 }
 
-/* line 971, src/style.scss */
+/* line 970, src/style.scss */
 .raffle-content p {
   font: 17px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 @media (min-width: 700px) {
-  /* line 971, src/style.scss */
+  /* line 970, src/style.scss */
   .raffle-content p {
     font: 20px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   }
 }
 
 /* ============================================= */
-/*	Footer	    						   		 */
+/*	Store	    						   		 */
 /* ============================================= */
 /* line 990, src/style.scss */
+.closed-store {
+  background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
+}
+
+/* line 994, src/style.scss */
+.closed-sign-mod {
+  max-width: 620px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 90px;
+}
+/* line 1000, src/style.scss */
+.closed-sign-mod img {
+  max-width: 600px;
+}
+
+/* ============================================= */
+/*	Footer	    						   		 */
+/* ============================================= */
+/* line 1012, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
 }
 
-/* line 995, src/style.scss */
+/* line 1017, src/style.scss */
 .ftr-mod {
   margin: 0 auto;
   max-width: 1200px;
 }
 @media (min-width: 1000px) {
-  /* line 995, src/style.scss */
+  /* line 1017, src/style.scss */
   .ftr-mod {
     *zoom: 1;
   }
@@ -1891,31 +1911,31 @@ footer {
   }
 }
 
-/* line 1005, src/style.scss */
+/* line 1027, src/style.scss */
 .ftr-logo-mod {
   margin-bottom: 50px;
 }
 
-/* line 1009, src/style.scss */
+/* line 1031, src/style.scss */
 .ftr-logo {
   max-width: 300px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 1015, src/style.scss */
+/* line 1037, src/style.scss */
 .contact-li-item {
   color: #fff;
   font: 800 16px/160% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 }
 
-/* line 1020, src/style.scss */
+/* line 1042, src/style.scss */
 .sponsors {
   background-color: #f5f5f3;
   margin: 0 auto;
   text-align: center;
 }
-/* line 1025, src/style.scss */
+/* line 1047, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -1942,7 +1962,7 @@ footer {
   margin-right: 0;
 }
 @media (min-width: 700px) {
-  /* line 1025, src/style.scss */
+  /* line 1047, src/style.scss */
   .sponsors .sponsors-mod {
     *zoom: 1;
   }
@@ -1968,13 +1988,13 @@ footer {
     margin-right: 0;
   }
 }
-/* line 1034, src/style.scss */
+/* line 1056, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 1040, src/style.scss */
+/* line 1062, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 1;
   -moz-columns: 1;
@@ -1984,13 +2004,13 @@ footer {
   margin-bottom: 25px;
 }
 @media (min-width: 600px) {
-  /* line 1040, src/style.scss */
+  /* line 1062, src/style.scss */
   .sponsors .sponsors-list-mod {
     margin-bottom: 0px;
   }
 }
 @media (min-width: 900px) {
-  /* line 1040, src/style.scss */
+  /* line 1062, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 2;
     -moz-columns: 2;
@@ -2000,7 +2020,7 @@ footer {
   }
 }
 @media (min-width: 1200px) {
-  /* line 1040, src/style.scss */
+  /* line 1062, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 3;
     -moz-columns: 3;
@@ -2009,13 +2029,13 @@ footer {
     columns: 3;
   }
 }
-/* line 1057, src/style.scss */
+/* line 1079, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 1063, src/style.scss */
+/* line 1085, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -2023,12 +2043,12 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 1070, src/style.scss */
+/* line 1092, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 1075, src/style.scss */
+/* line 1097, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   width: 100%;
@@ -2039,13 +2059,13 @@ footer {
   position: relative;
 }
 @media (min-width: 700px) {
-  /* line 1075, src/style.scss */
+  /* line 1097, src/style.scss */
   .ftr-logo-bike {
     display: block;
   }
 }
 
-/* line 1089, src/style.scss */
+/* line 1111, src/style.scss */
 .mailing-list-mod {
   max-width: 540px;
   width: 100%;
@@ -2056,13 +2076,13 @@ footer {
   background: url(/wp-content/themes/spokes/images/mailing-list-stamp.png) 100% 15% no-repeat, url(/wp-content/themes/spokes/images/mailing-list-bg.jpg);
   background-size: 150px, 100%;
 }
-/* line 1101, src/style.scss */
-.mailing-list-mod #mailing-list, .mailing-list-mod #mailing-list-subscribe {
+/* line 1123, src/style.scss */
+.mailing-list-mod #mce-EMAIL, .mailing-list-mod #mc-embedded-subscribe {
   height: 32px;
   margin-bottom: 12px;
 }
-/* line 1106, src/style.scss */
-.mailing-list-mod #mailing-list {
+/* line 1128, src/style.scss */
+.mailing-list-mod #mce-EMAIL {
   border-color: #eee;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -2074,12 +2094,12 @@ footer {
   border-bottom-color: #ddd;
   width: 229px;
 }
-/* line 1115, src/style.scss */
-.mailing-list-mod #mailing-list-subscribe {
+/* line 1137, src/style.scss */
+.mailing-list-mod #mc-embedded-subscribe {
   width: 105px;
 }
 
-/* line 1121, src/style.scss */
+/* line 1143, src/style.scss */
 .mailing-list-mod:before {
   height: 8px;
   content: '';
@@ -2093,7 +2113,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1134, src/style.scss */
+/* line 1156, src/style.scss */
 .mailing-list-mod:after {
   height: 8px;
   content: '';
@@ -2107,7 +2127,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1147, src/style.scss */
+/* line 1169, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
@@ -2121,12 +2141,12 @@ footer {
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 1165, src/style.scss */
+/* line 1191, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 1169, src/style.scss */
+/* line 1195, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -2147,7 +2167,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1183, src/style.scss */
+/* line 1209, src/style.scss */
 .card-effect:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -2158,12 +2178,12 @@ footer {
   left: auto;
 }
 
-/* line 1189, src/style.scss */
+/* line 1215, src/style.scss */
 .card-effect-lg {
   position: relative;
 }
 
-/* line 1193, src/style.scss */
+/* line 1219, src/style.scss */
 .card-effect-lg:before, .card-effect-lg:after {
   z-index: -1;
   position: absolute;
@@ -2184,7 +2204,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1207, src/style.scss */
+/* line 1233, src/style.scss */
 .card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
