--- a/views/tease-blog.twig
+++ b/views/tease-blog.twig
@@ -1,6 +1,6 @@
 <article class="blog-post-tz card-effect">						
 	<div class="post-date">{{ post.post_date | date('n.j.y') }}</div>
 	<!-- <div class="post-date-mod"></div> -->
-	<h5 class="tz-h1">{{ post.post_title }}</h5>
+	<h5 class="tz-h1"><a href="{{post.permalink}}">{{ post.post_title }}</a></h5>
 	<p class="tz-txt">{{ post.get_preview(60) }}</p>
 </article><!-- /blog-post -->
