--- a/views/single.twig
+++ b/views/single.twig
@@ -1,9 +1,9 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="post-intro-img">
-		<img src="/wp-content/themes/spokes/images/hero-img-post.jpg" alt="alt text"/>
-	</div>
+		<div class="post-intro-img">
+			<img src="{{post.hero.url}}" alt="alt text"/>
+		</div>
 
 	<div class="post-content-topper"></div>
 	
@@ -13,21 +13,11 @@
 				<h4 class="section-h1">Blog</h4>
 			</div><!-- /section-hd-mod -->	
 
-			<h1 class="post-h1">Our Best Year Yet! We've been cycling like champs.</h1>
-			<div class="byline">By Mike</div><!-- /byline -->
+			<h1 class="post-h1">{{post.title}}</h1>
+			<div class="byline">by {{post.author.display_name}}</div><!-- /byline -->
 
-			<p>Holy smokes! Our biggest team yet! We’ve got eight dudes stacked up on our newly renamed Bikes Fight Cancer team this year! Welcome new comers: Will Bangs and James Sutter! Thanks to the great support of friends, family, and strangers-a-like, we were able to raise an astonishing $34,703 for the Jimmy Fund!</p>
-			<p>We dedicated the ride to our pal, Kevin Bouvier, who was recently diagnosed with cancer but is THANKFULLY getting the treatment he needs and was able to join us at the start line in Sturbridge for some photos.</p>  
-			<p>The ride was great fun, though Saturday was perhaps the hottest, muggiest ride in Pan-Mass Challenge history and Sunday was filled with short bursts of down-pouring rain. The weather was no match for our sleek new black & neon green BFC jerseys! Fashionistas! Keeping eight riders together for all 192-miles was a bit tricky but we all managed to start and end each day as a team (though James missed the last turn that we all take in Provincetown!!!... He’ll learn next year!). Congrats to Bob for winning the P-town line this year! Johnny came in a close second, which we all know is really just the first loser.</p>
-			<p>The Bikes Fight Cancer immediate family is also growing — Welcome Gracie Morin and Jaclyn Swiatlowski! Also congrats to the newlyweds Jon and Sara Jasak today!</p>
-
-			<img class="" src="/wp-content/themes/spokes/images/history-tz-2012.jpg"/>
-
+			{{post.get_content}}
 
 	</div> <!-- /post-content-mod -->	
-	
-	{% for child in post.get_children %}
-		{{child.title}}
-	{% endfor %}
 
 {% endblock %}
