404 page, store closed page and mail chimp built and ready to rip. Blog post-tz is now responsive.

--- a/views/404.twig
+++ b/views/404.twig
@@ -1,4 +1,13 @@
 {% extends "base.twig" %}
 
 {% block content %}
+	<section class="bfc-404">
+		<div class="txt-mod-404">
+			<h1 class="h1-404">404 not found</h1>
+			<div class="txt-404">
+				Oh crap! The page you're looking for does not exist or we totally busted something. Hey, we're experts are riding bikes, not interspace.
+			</div><!-- /404-txt -->	
+		</div><!-- /404-txt-mod -->	
+	</section><!-- /closed-store -->	
+
 {% endblock %}
