--- a/views/header.twig
+++ b/views/header.twig
@@ -2,6 +2,7 @@
     {% block header %}
     <div class="wrapper">
     	<div class="nav-chrome">
+            <a href="/"> <img class="nav-logo-m" src="/wp-content/themes/spokes/images/bfc-nav-m-logo.png"/> </a>
 			<a href="/"> <img class="nav-logo" src="/wp-content/themes/spokes/images/bfc-nav-logo.png"/> </a>
 	        <a href="#" class="m-nav-toggle"></a>
     	</div><!-- /nav-chrome -->
