--- a/views/tease-blog.twig
+++ b/views/tease-blog.twig
@@ -1,6 +1,8 @@
 <article class="blog-post-tz card-effect">						
 	<div class="post-date">{{ post.post_date | date('n.j.y') }}</div>
 	<!-- <div class="post-date-mod"></div> -->
-	<h5 class="tz-h1"><a href="{{post.permalink}}">{{ post.post_title }}</a></h5>
-	<p class="tz-txt">{{ post.get_preview(60) }}</p>
+	<div class="tz-content-mod">
+		<h5 class="tz-h1"><a href="{{post.permalink}}">{{ post.post_title }}</a></h5>
+		<p class="tz-txt">{{ post.get_preview(50) }}</p>
+	</div><!-- /tz-content-mod -->	
 </article><!-- /blog-post -->
