--- a/src/style.scss
+++ b/src/style.scss
@@ -318,11 +318,25 @@ em   	{	font-style: italic;	}
 .nav-logo {
 	max-width: 46px;
 	width: 100%;
+	display: none;
+	position: relative;
 
-	@media (min-width: $medium) {
+	@media (min-width: 700px) {
 		max-width: 80px;
+		display: inline;
 	}//mq
 } 
+
+.nav-logo-m {
+	max-width: 50px;
+	width: 100%;
+	display: inline;
+	padding-top: 4px;
+
+	@media (min-width: 700px) {
+		display: none;
+	}
+}
 
 
 /***  Mobile-Nav  ***/ 
@@ -558,8 +572,8 @@ em   	{	font-style: italic;	}
 	@include box-shadow(0 0 30px rgba(0, 0, 0, 0.3));	
 
 	@media (min-width: $medium) {
-    	max-height: 355px;
-    	height: 355px;
+    	// max-height: 355px;
+    	// height: 355px;
     }//mq
 }
 
@@ -692,22 +706,30 @@ em   	{	font-style: italic;	}
 	border-color: #eee;
 	border-bottom-color: #ddd;
 	max-width: 768px;
+	padding: 0px;
 	width: 100%;
-	max-height: 300px;
 	text-align: left;
-	padding: 35px 35px 50px 165px;
 	position: relative;
 	background-color: #fff;
-	background-image: url(/wp-content/themes/spokes/images/bg-dots.png);
-	background-size: 120px;
-	background-repeat: repeat-y;
-	min-height: 300px;
+	min-height: 295px;	
 	@include trans;	
 
 	&:hover {
 		@include trans;
 		@include box-shadow(0 0 30px rgba(0, 0, 0, 0.3));	
-	}
+	}//hover
+
+	@media (min-width: 550px) {
+		background-image: url(/wp-content/themes/spokes/images/bg-dots.png);
+		background-size: 120px;
+		background-repeat: repeat-y;
+		padding: 35px 35px 50px 165px;
+	}//mq
+
+	@media (min-width: $large) {
+		min-height: 300px;
+		max-height: 300px;
+	}//mq
 }
 
 .post-date-mod {
@@ -719,15 +741,24 @@ em   	{	font-style: italic;	}
 	background-color: $bfc-gold;
 	padding: 10px;
 	height: 42px;
-	width: 116px;
+	width: 100%;
 	color: #fff;
 	text-align: center;
-	position: absolute;
-	top: 44px;
-	left: -20px;
+	position: static;
 	font: 400 20px/120% $freight-sans;
+
+	@media (min-width: 550px) {
+		text-align: center;
+		position: absolute;
+		top: 44px;
+		left: -20px;
+		width: 116px;
+	}//mq
 }
 
+.tz-content-mod {
+	padding: 20px;
+}
 
 
 /* ============================================= */
@@ -769,11 +800,15 @@ em   	{	font-style: italic;	}
 .post-content-mod {
 	max-width: 779px;
 	margin-top: -140px;
-	padding: 30px 10px 10px 10px;
+	padding: 30px 10px 0px 10px;
 
 	p {
 		font: 20px/160% $freight-txt;
 		margin-bottom: 28px;
+
+		&:last-child {
+			margin-bottom: 0px;
+		}//lc
 	}
 
 	.size-full {
@@ -792,13 +827,17 @@ em   	{	font-style: italic;	}
 	}//MQ
 
 	@media (min-width: 600px) {
-		padding: 30px 80px 80px 80px;
+		padding: 30px 80px 0px 80px;
 
 		.section-h1 {
 			margin-bottom: 40px;
 		}
 
 	}//MQ
+
+	@media (min-width: 1150px) {
+		padding: 30px 80px 90px 80px;
+	}
 }//post-conenter-mod
 
 
@@ -902,7 +941,7 @@ a.history-link-mod {
 	color: #555;
 	max-width: 779px;
 	width: 100%;
-	padding: 0px 80px 80px 80px;
+	padding: 0px 10px 80px 10px;
 
 	a {
 		@include trans;
@@ -913,6 +952,9 @@ a.history-link-mod {
 		}//hover
 	}//a	
 
+	@media (min-width: 500px) {
+		padding: 0px 80px 80px 80px;		
+	}//mq
 
 	@media (min-width: 1150px){
 		top: 1100px;
@@ -955,6 +997,13 @@ a.history-link-mod {
 	margin-bottom: 25px;
 }
 
+.history-aside {
+	.caption-section-h {
+		border-top: 1px solid;
+		border-color: #eee;
+		padding-top: 25px;
+	}//caption-section-h	
+}//history-aside
 
 /* ============================================= */
 
@@ -1030,12 +1079,61 @@ a.history-link-mod {
 	max-width: 620px;
 	width: 100%;
 	margin: 0 auto;
-	padding-top: 90px;
+	padding-top: 0px;
 
 	img {
 		max-width: 600px;
-	}
+		width: 100%;
+	}//img
+
+	@media (min-width: $medium) {
+		padding-top: 90px;
+	}//mq
 }
+
+/* ============================================= */
+
+/*	Blog-Post   						   		 */ 
+
+/* ============================================= */
+
+
+.bfc-404 {
+	padding: 0% 0%;
+	background: url(/wp-content/themes/spokes/images/bfc-404.jpg) no-repeat center center;
+	background-size: cover; 
+	max-height: 1000px;
+	height: 1000px;	
+	margin: 0 auto;
+	text-align: center;	
+	position: relative;
+}
+
+.txt-mod-404 {
+	text-align: left;
+	background-color: #000;
+	padding: 40px 40px 60px 40px;
+  	position: absolute;
+  	left: 50%;
+  	top: 50%;
+  	@include transform(translate(-50%, -50%));
+  	max-width: 500px;
+}
+
+.h1-404 {
+	font: 800 48px/120% $freight-sans;
+	color: #fff;
+	text-transform: uppercase;
+	margin-bottom: 15px;
+	letter-spacing: 1px;
+}
+
+.txt-404 {
+	font: 22px/148% $freight-txt;
+	color: #ddd;
+}
+
+
 
 
 /* ============================================= */
@@ -1164,14 +1262,17 @@ footer {
 .mailing-list-mod {
 	max-width: 540px;
 	width: 100%;
-	height: 228px;
 	padding: 40px;
 	position: relative;
-	max-width: 540px;
 	background: 
 			url(/wp-content/themes/spokes/images/mailing-list-stamp.png) 100% 15% no-repeat,
 			url(/wp-content/themes/spokes/images/mailing-list-bg.jpg);
 	background-size: 150px, 100%;
+
+	@media (min-width: $medium) {
+		max-height: 228px;
+		height: 228px;
+	}
 
 	#mce-EMAIL, #mc-embedded-subscribe {
 		height: 32px;
