--- a/views/tease-blog.twig
+++ b/views/tease-blog.twig
@@ -3,6 +3,7 @@
 	<!-- <div class="post-date-mod"></div> -->
 	<div class="tz-content-mod">
 		<h5 class="tz-h1"><a href="{{post.permalink}}">{{ post.post_title }}</a></h5>
-		<p class="tz-txt">{{ post.get_preview(50) }}</p>
+		<div class="byline">By Mike</div>
+		<p class="tz-txt">{{ post.get_preview(40) }}</p>
 	</div><!-- /tz-content-mod -->	
 </article><!-- /blog-post -->
