--- a/views/home.twig
+++ b/views/home.twig
@@ -4,11 +4,7 @@
 		{% set size = intro.bgs | length - 1 %}
 		{% set key = random(size) %}
 
-		<div class="post-intro-img">
-			<img src="{{ intro.bgs[key].image.url }}"/>
-		</div>
-
-		<section class="page-intro">
+		<section class="page-intro" style="background-image: url({{ intro.bgs[key].image.url }})">
 			<h1 class="intro-h1 home-intro">Bikes Fight Cancer</h1>
 			<img class="intro-stars" src="/wp-content/themes/spokes/images/intro-stars.png" />
 			<h2 class="intro-h2">{{intro.goal}}</h2>
