image optim all images, pagination base style, store closed page built and set.

--- a/views/page-jareds-page.twig
+++ b/views/page-jareds-page.twig
@@ -1,10 +1,12 @@
 {% extends "base.twig" %}
 
-	{% block content %}
-	<div class="page-mod">
+{% block content %}
+	<section class="closed-store">
 		<div class="closed-sign-mod">
-			<img class="closed-sign" src="/wp-content/themes/spokes/images/closed-sign.png" />
+			<div class="page-mod">
+				<img class="closed-sign" src="/wp-content/themes/spokes/images/closed-sign.png" />
+			</div><!-- /page-mod -->
 		</div><!-- /closed-sign-mod -->
-	</div>
-	{% endblock %}
+	</section><!-- /closed-store -->	
 
+{% endblock %}
