--- a/src/style.scss
+++ b/src/style.scss
@@ -760,6 +760,91 @@ em   	{	font-style: italic;	}
 	padding: 20px;
 }
 
+.pagination-mod {
+	margin: 0 auto;
+	text-align: center;
+	max-width: 700px;
+	width: 100%;
+	margin-bottom: 0px;
+
+	@media (min-width: $small) {
+		margin-bottom: 30px;
+	}
+}
+
+.tool-pagination {
+	display: inline;
+	max-width: 200px;
+	margin: 0 auto;
+	text-align: center;
+
+	a {
+		color: $bfc-gold;
+
+		&:hover {
+			color:darken($bfc-gold, 12%);
+		}//hover
+	}//a
+}
+
+.next, .prev, .pages {
+	font: 400 20px/130% $freight-sans;
+	display: inline;
+
+	a {
+		color: $bfc-gold;
+
+		&:hover {
+			color:darken($bfc-gold, 12%);
+		}//hover
+	}//a
+}
+
+.pages {
+	li {
+		display: inline;
+		margin-right: 2px;
+
+		&:last-child {
+			margin-right: 0px;
+		}
+	}
+}
+
+.next {
+	margin-left: 10px;
+	color: #fff;
+	position: relative;	
+	max-width: 30px;
+	width: 100%;
+	max-height: 15px;
+	height: 100%;
+	padding: 0px 10px 0px 10px;
+}
+
+.prev {
+	margin-right: 10px;
+	color: #fff;
+	position: relative;
+	max-width: 30px;
+	width: 100%;
+	max-height: 15px;
+	height: 100%;
+	padding: 0px 10px 0px 10px;	
+}
+
+// .next:after {
+// 	width: 0; 
+// 	height: 0;
+// 	content: "";
+// 	border-top: 8px solid transparent;
+// 	border-bottom: 8px solid transparent;
+// 	border-left: 8px solid $bfc-gold;
+// 	position: absolute;
+// 	top: 5px;
+// 	right: -5px;
+// }
+
 
 /* ============================================= */
 
@@ -827,7 +912,7 @@ em   	{	font-style: italic;	}
 	}//MQ
 
 	@media (min-width: 600px) {
-		padding: 30px 80px 0px 80px;
+		padding: 30px 80px 90px 80px;
 
 		.section-h1 {
 			margin-bottom: 40px;
@@ -840,7 +925,50 @@ em   	{	font-style: italic;	}
 	}
 }//post-conenter-mod
 
+.single-content {
 
+	> p {
+		a {
+			color: $bfc-gold;
+
+			&:hover {
+				color:darken($bfc-gold, 12%);
+			}//hover
+		}//a
+	}//p
+
+	> blockquote {
+		color: $bfc-gold;
+		font: 400 33px/136% $freight-sans;
+		margin-bottom: 28px;
+		font-style: italic;
+	}//blockquote
+
+	.bulleted-list, .numbered-list {
+		padding-left: 18px;
+		margin-bottom: 28px;
+	}
+
+	.bulleted-list {
+		list-style-type: disc;
+	}
+
+	.numbered-list {
+		list-style-type: decimal;
+	}
+
+	ul {
+		> li {
+			color: $bfc-gold;
+			font: 400 16px/145% $freight-sans;
+		}
+
+		> li span {
+			color: #000;
+			font: 400 18px/145% $freight-sans;
+		}
+	}//ul	
+}
 
 /* ============================================= */
 
@@ -1088,7 +1216,14 @@ a.history-link-mod {
 
 	@media (min-width: $medium) {
 		padding-top: 90px;
+		padding-bottom: 50px;
 	}//mq
+}
+
+.store-closed {
+	text-align: center;
+	font: 800 20px/130% $freight-sans;
+	padding-top: 30px;
 }
 
 /* ============================================= */
