--- a/views/archive.twig
+++ b/views/archive.twig
@@ -1,12 +1,11 @@
 {% extends "base.twig" %}
 
 {% block content %}
+	<div class="page-mod">
+		{% for post in posts %}
+			{% include ['tease-'~post.post_type~'.twig', 'tease-blog.twig'] %}
+		{% endfor %}
 
-	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease-blog.twig'] %}
-	{% endfor %}
-
-	{{pagination|print_r}}
-	{% include "components/pagination.twig" %}
-
+		{% include "components/pagination.twig" %}
+	</div><!-- /page-mod -->
 {% endblock %}
