--- a/views/footer.twig
+++ b/views/footer.twig
@@ -6,9 +6,13 @@
 			<div class="ftr-logo-mod ui-block-1">
 				<h5 class="ftr-h1">Bikes Fight Cancer</h5>
 				{{ footer.footer.post_content }}
+                <div class="fb-box-mod">
+                    <h5 class="fb-like-h">Like us on Facebook!</h5>
+                    <div class="fb-like-box" data-href="https://www.facebook.com/bikesfightcancer" data-width="250" data-show-faces="false" data-colorscheme="dark" data-stream="false" data-show-border="false" data-header="false">
+                    </div><!-- /fb-like-box -->
+                </div><!-- /fb-box-mod -->
 			</div><!-- /ftr-logo-mod -->	
 			<!-- Begin MailChimp Signup Form -->
-         <!--    <link href="http://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css"> -->
             <div id="mc_embed_signup" class="mailing-list-mod ui-block-2">
             <form action="http://bikesfightcancer.us5.list-manage.com/subscribe/post?u=77968ce6af3fe82c4a8ebd182&amp;id=9af9b10b3d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <label for="mailing-list" class="email-h1">E-mail List</label>
