--- a/views/page-store-closed.twig
+++ b/views/page-store-closed.twig
@@ -4,7 +4,7 @@
 	<div class="page-mod">
 		<div class="closed-sign-mod">
 			<img class="closed-sign" src="/wp-content/themes/spokes/images/closed-sign.png" />
-			<h1 class="store-closed">Our store is closed. Please check back next Season.</h1>
+			<h1 class="store-closed">Dang, our store is closed. Please check back next Season.</h1>
 		</div><!-- /closed-sign-mod -->
 	</div>
 	{% endblock %}
