--- a/style.css
+++ b/style.css
@@ -1795,26 +1795,29 @@ em {
   font: 400 33px/136% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   margin-bottom: 28px;
   font-style: italic;
+  border-left: 3px solid;
+  border-color: #9f916f;
+  padding-left: 20px;
 }
-/* line 947, src/style.scss */
+/* line 950, src/style.scss */
 .single-content .bulleted-list, .single-content .numbered-list {
   padding-left: 18px;
   margin-bottom: 28px;
 }
-/* line 952, src/style.scss */
+/* line 955, src/style.scss */
 .single-content .bulleted-list {
   list-style-type: disc;
 }
-/* line 956, src/style.scss */
+/* line 959, src/style.scss */
 .single-content .numbered-list {
   list-style-type: decimal;
 }
-/* line 961, src/style.scss */
+/* line 964, src/style.scss */
 .single-content ul > li {
   color: #9f916f;
   font: 400 16px/145% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 }
-/* line 966, src/style.scss */
+/* line 969, src/style.scss */
 .single-content ul > li span {
   color: #000;
   font: 400 18px/145% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -1823,7 +1826,7 @@ em {
 /* ============================================= */
 /*	History-Page   						   		 */
 /* ============================================= */
-/* line 979, src/style.scss */
+/* line 982, src/style.scss */
 .history-list-mod {
   margin: 0 auto;
   text-align: center;
@@ -1831,20 +1834,20 @@ em {
   padding: 0px 10px;
 }
 @media (min-width: 401px) {
-  /* line 979, src/style.scss */
+  /* line 982, src/style.scss */
   .history-list-mod {
     margin-top: -50px;
   }
 }
 @media (min-width: 900px) {
-  /* line 979, src/style.scss */
+  /* line 982, src/style.scss */
   .history-list-mod {
     padding: 0px;
     margin-bottom: 100px;
   }
 }
 
-/* line 995, src/style.scss */
+/* line 998, src/style.scss */
 .history-year {
   margin: 0 auto 50px auto;
   border: 1px solid;
@@ -1866,7 +1869,7 @@ em {
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1013, src/style.scss */
+/* line 1016, src/style.scss */
 .history-year:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -1877,25 +1880,25 @@ em {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
 @media (min-width: 900px) {
-  /* line 995, src/style.scss */
+  /* line 998, src/style.scss */
   .history-year {
     max-height: 270px;
     max-width: 850px;
   }
 }
 
-/* line 1024, src/style.scss */
+/* line 1027, src/style.scss */
 a.history-link-mod {
   display: block;
 }
 
-/* line 1028, src/style.scss */
+/* line 1031, src/style.scss */
 .year-tz-img {
   width: 100%;
   margin-top: -1px;
 }
 @media (min-width: 900px) {
-  /* line 1028, src/style.scss */
+  /* line 1031, src/style.scss */
   .year-tz-img {
     float: left;
     max-width: 380px;
@@ -1903,30 +1906,30 @@ a.history-link-mod {
   }
 }
 
-/* line 1039, src/style.scss */
+/* line 1042, src/style.scss */
 .year-tz-txt-mod {
   padding: 25px 25px 30px 25px;
   text-align: left;
 }
 @media (min-width: 900px) {
-  /* line 1039, src/style.scss */
+  /* line 1042, src/style.scss */
   .year-tz-txt-mod {
     padding: 27px 20px 30px 420px;
   }
 }
-/* line 1047, src/style.scss */
+/* line 1050, src/style.scss */
 .year-tz-txt-mod .tz-h1 {
   color: #9f916f;
   margin-bottom: 15px;
 }
-/* line 1051, src/style.scss */
+/* line 1054, src/style.scss */
 .year-tz-txt-mod .tz-h1 a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1054, src/style.scss */
+/* line 1057, src/style.scss */
 .year-tz-txt-mod .tz-h1 a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -1936,7 +1939,7 @@ a.history-link-mod {
 }
 
 /***  History-Post  ***/
-/* line 1065, src/style.scss */
+/* line 1068, src/style.scss */
 .history-aside {
   margin: 0 auto;
   position: static;
@@ -1946,14 +1949,14 @@ a.history-link-mod {
   width: 100%;
   padding: 0px 10px 80px 10px;
 }
-/* line 1074, src/style.scss */
+/* line 1077, src/style.scss */
 .history-aside a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1077, src/style.scss */
+/* line 1080, src/style.scss */
 .history-aside a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -1962,13 +1965,13 @@ a.history-link-mod {
   color: #9f916f;
 }
 @media (min-width: 500px) {
-  /* line 1065, src/style.scss */
+  /* line 1068, src/style.scss */
   .history-aside {
     padding: 0px 80px 80px 80px;
   }
 }
 @media (min-width: 1150px) {
-  /* line 1065, src/style.scss */
+  /* line 1068, src/style.scss */
   .history-aside {
     top: 1100px;
     left: 4%;
@@ -1978,46 +1981,46 @@ a.history-link-mod {
   }
 }
 @media (min-width: 1300px) {
-  /* line 1065, src/style.scss */
+  /* line 1068, src/style.scss */
   .history-aside {
     left: 10%;
   }
 }
 
-/* line 1100, src/style.scss */
+/* line 1103, src/style.scss */
 .caption-section-h {
   font: 800 23px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #444;
   margin: 40px 0px 15px 0px;
 }
 
-/* line 1106, src/style.scss */
+/* line 1109, src/style.scss */
 .caption-h {
   font: 800 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #555;
 }
 
-/* line 1111, src/style.scss */
+/* line 1114, src/style.scss */
 .history-aside-ul {
   margin-bottom: 25px;
 }
 
-/* line 1115, src/style.scss */
+/* line 1118, src/style.scss */
 .history-aside-item {
   font: 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #888;
 }
-/* line 1119, src/style.scss */
+/* line 1122, src/style.scss */
 .history-aside-item:last-child {
   margin-bottom: 22px;
 }
 
-/* line 1124, src/style.scss */
+/* line 1127, src/style.scss */
 .history-post-img {
   margin-bottom: 25px;
 }
 
-/* line 1129, src/style.scss */
+/* line 1132, src/style.scss */
 .history-aside .caption-section-h {
   border-top: 1px solid;
   border-color: #eee;
@@ -2027,7 +2030,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Raffle Page    						   		 */
 /* ============================================= */
-/* line 1142, src/style.scss */
+/* line 1145, src/style.scss */
 .raffle-list {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   border-top: 2px solid;
@@ -2035,7 +2038,7 @@ a.history-link-mod {
   border-color: #fff;
 }
 
-/* line 1149, src/style.scss */
+/* line 1152, src/style.scss */
 .raffle-list-mod {
   background-color: #fff;
   margin: 0 auto;
@@ -2051,19 +2054,19 @@ a.history-link-mod {
   text-align: center;
 }
 @media (min-width: 550px) {
-  /* line 1149, src/style.scss */
+  /* line 1152, src/style.scss */
   .raffle-list-mod {
     padding: 50px 100px 60px 90px;
   }
 }
 
-/* line 1166, src/style.scss */
+/* line 1169, src/style.scss */
 .raffle-list-item {
   font: 20px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 
-/* line 1171, src/style.scss */
+/* line 1174, src/style.scss */
 .raffle-list-bg {
   background-color: #fff;
   height: 515px;
@@ -2080,13 +2083,13 @@ a.history-link-mod {
   position: absolute;
 }
 
-/* line 1182, src/style.scss */
+/* line 1185, src/style.scss */
 .raffle-content p {
   font: 17px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 @media (min-width: 700px) {
-  /* line 1182, src/style.scss */
+  /* line 1185, src/style.scss */
   .raffle-content p {
     font: 20px/200% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   }
@@ -2095,32 +2098,32 @@ a.history-link-mod {
 /* ============================================= */
 /*	Store	    						   		 */
 /* ============================================= */
-/* line 1202, src/style.scss */
+/* line 1205, src/style.scss */
 .closed-store {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
 }
 
-/* line 1206, src/style.scss */
+/* line 1209, src/style.scss */
 .closed-sign-mod {
   max-width: 620px;
   width: 100%;
   margin: 0 auto;
   padding-top: 0px;
 }
-/* line 1212, src/style.scss */
+/* line 1215, src/style.scss */
 .closed-sign-mod img {
   max-width: 600px;
   width: 100%;
 }
 @media (min-width: 700px) {
-  /* line 1206, src/style.scss */
+  /* line 1209, src/style.scss */
   .closed-sign-mod {
     padding-top: 90px;
     padding-bottom: 50px;
   }
 }
 
-/* line 1223, src/style.scss */
+/* line 1226, src/style.scss */
 .store-closed {
   text-align: center;
   font: 800 20px/130% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -2130,7 +2133,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Blog-Post   						   		 */
 /* ============================================= */
-/* line 1236, src/style.scss */
+/* line 1239, src/style.scss */
 .bfc-404 {
   padding: 0% 0%;
   background: url(/wp-content/themes/spokes/images/bfc-404.jpg) no-repeat center center;
@@ -2142,7 +2145,7 @@ a.history-link-mod {
   position: relative;
 }
 
-/* line 1247, src/style.scss */
+/* line 1250, src/style.scss */
 .txt-mod-404 {
   text-align: left;
   background-color: #000;
@@ -2158,7 +2161,7 @@ a.history-link-mod {
   max-width: 500px;
 }
 
-/* line 1258, src/style.scss */
+/* line 1261, src/style.scss */
 .h1-404 {
   font: 800 48px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #fff;
@@ -2167,7 +2170,7 @@ a.history-link-mod {
   letter-spacing: 1px;
 }
 
-/* line 1266, src/style.scss */
+/* line 1269, src/style.scss */
 .txt-404 {
   font: 22px/148% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   color: #ddd;
@@ -2176,19 +2179,19 @@ a.history-link-mod {
 /* ============================================= */
 /*	Footer	    						   		 */
 /* ============================================= */
-/* line 1280, src/style.scss */
+/* line 1283, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
 }
 
-/* line 1285, src/style.scss */
+/* line 1288, src/style.scss */
 .ftr-mod {
   margin: 0 auto;
   max-width: 1200px;
 }
 @media (min-width: 1000px) {
-  /* line 1285, src/style.scss */
+  /* line 1288, src/style.scss */
   .ftr-mod {
     *zoom: 1;
   }
@@ -2215,31 +2218,31 @@ footer {
   }
 }
 
-/* line 1295, src/style.scss */
+/* line 1298, src/style.scss */
 .ftr-logo-mod {
   margin-bottom: 50px;
 }
 
-/* line 1299, src/style.scss */
+/* line 1302, src/style.scss */
 .ftr-logo {
   max-width: 300px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 1305, src/style.scss */
+/* line 1308, src/style.scss */
 .contact-li-item {
   color: #fff;
   font: 800 16px/160% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 }
-/* line 1309, src/style.scss */
+/* line 1312, src/style.scss */
 .contact-li-item a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1312, src/style.scss */
+/* line 1315, src/style.scss */
 .contact-li-item a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2248,13 +2251,13 @@ footer {
   color: #555;
 }
 
-/* line 1319, src/style.scss */
+/* line 1322, src/style.scss */
 .sponsors {
   background-color: #f5f5f3;
   margin: 0 auto;
   text-align: center;
 }
-/* line 1324, src/style.scss */
+/* line 1327, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -2281,7 +2284,7 @@ footer {
   margin-right: 0;
 }
 @media (min-width: 700px) {
-  /* line 1324, src/style.scss */
+  /* line 1327, src/style.scss */
   .sponsors .sponsors-mod {
     *zoom: 1;
   }
@@ -2307,13 +2310,13 @@ footer {
     margin-right: 0;
   }
 }
-/* line 1333, src/style.scss */
+/* line 1336, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 1339, src/style.scss */
+/* line 1342, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 1;
   -moz-columns: 1;
@@ -2322,14 +2325,14 @@ footer {
   columns: 1;
   margin-bottom: 25px;
 }
-/* line 1343, src/style.scss */
+/* line 1346, src/style.scss */
 .sponsors .sponsors-list-mod a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1346, src/style.scss */
+/* line 1349, src/style.scss */
 .sponsors .sponsors-list-mod a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2338,13 +2341,13 @@ footer {
   color: #bada55;
 }
 @media (min-width: 600px) {
-  /* line 1339, src/style.scss */
+  /* line 1342, src/style.scss */
   .sponsors .sponsors-list-mod {
     margin-bottom: 0px;
   }
 }
 @media (min-width: 900px) {
-  /* line 1339, src/style.scss */
+  /* line 1342, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 2;
     -moz-columns: 2;
@@ -2354,7 +2357,7 @@ footer {
   }
 }
 @media (min-width: 1200px) {
-  /* line 1339, src/style.scss */
+  /* line 1342, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 3;
     -moz-columns: 3;
@@ -2363,13 +2366,13 @@ footer {
     columns: 3;
   }
 }
-/* line 1365, src/style.scss */
+/* line 1368, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 1371, src/style.scss */
+/* line 1374, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -2377,12 +2380,12 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 1378, src/style.scss */
+/* line 1381, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 1383, src/style.scss */
+/* line 1386, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   width: 100%;
@@ -2393,13 +2396,13 @@ footer {
   position: relative;
 }
 @media (min-width: 700px) {
-  /* line 1383, src/style.scss */
+  /* line 1386, src/style.scss */
   .ftr-logo-bike {
     display: block;
   }
 }
 
-/* line 1397, src/style.scss */
+/* line 1400, src/style.scss */
 .mailing-list-mod {
   max-width: 540px;
   width: 100%;
@@ -2409,18 +2412,18 @@ footer {
   background-size: 150px, 100%;
 }
 @media (min-width: 700px) {
-  /* line 1397, src/style.scss */
+  /* line 1400, src/style.scss */
   .mailing-list-mod {
     max-height: 228px;
     height: 228px;
   }
 }
-/* line 1412, src/style.scss */
+/* line 1415, src/style.scss */
 .mailing-list-mod #mce-EMAIL, .mailing-list-mod #mc-embedded-subscribe {
   height: 32px;
   margin-bottom: 12px;
 }
-/* line 1417, src/style.scss */
+/* line 1420, src/style.scss */
 .mailing-list-mod #mce-EMAIL {
   border-color: #eee;
   -webkit-border-radius: 5px;
@@ -2433,14 +2436,14 @@ footer {
   border-bottom-color: #ddd;
   width: 229px;
 }
-/* line 1426, src/style.scss */
+/* line 1429, src/style.scss */
 .mailing-list-mod #mc-embedded-subscribe {
   width: 105px;
   letter-spacing: 1px;
   padding: 0px 2px 0px 2px;
 }
 
-/* line 1434, src/style.scss */
+/* line 1437, src/style.scss */
 .mailing-list-mod:before {
   height: 8px;
   content: '';
@@ -2454,7 +2457,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1447, src/style.scss */
+/* line 1450, src/style.scss */
 .mailing-list-mod:after {
   height: 8px;
   content: '';
@@ -2468,7 +2471,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1460, src/style.scss */
+/* line 1463, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
@@ -2479,15 +2482,20 @@ footer {
   text-align: center;
 }
 
+/* line 1478, src/style.scss */
+.fb-box-mod {
+  margin-top: 30px;
+}
+
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 1482, src/style.scss */
+/* line 1488, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 1486, src/style.scss */
+/* line 1492, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -2508,7 +2516,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1500, src/style.scss */
+/* line 1506, src/style.scss */
 .card-effect:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -2519,12 +2527,12 @@ footer {
   left: auto;
 }
 
-/* line 1506, src/style.scss */
+/* line 1512, src/style.scss */
 .card-effect-lg {
   position: relative;
 }
 
-/* line 1510, src/style.scss */
+/* line 1516, src/style.scss */
 .card-effect-lg:before, .card-effect-lg:after {
   z-index: -1;
   position: absolute;
@@ -2545,7 +2553,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1524, src/style.scss */
+/* line 1530, src/style.scss */
 .card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
