--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -28,6 +28,16 @@
 		  })();
 		</script>
 
+		<!-- FB Like Jams -->
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+
 		{{wp_head}}
 	</head>
 	<body {{body_classes|wp_body_class}}>
